--- a/examples/cxi86415/small_back.cfg
+++ b/examples/cxi86415/small_back.cfg
@@ -1,5 +1,5 @@
 [psana]
-calib-dir = '/reg/d/psdm/CXI/cxi86415/calib'
+calib-dir = /reg/d/psdm/CXI/cxi86415/calib
 modules = CSPadPixCoords.CSPad2x2NDArrProducer:2 ImgAlgos.NDArrCalib:2
 
 [CSPadPixCoords.CSPad2x2NDArrProducer:2]
