running analysis from Ds2 instead of Dg3

--- a/examples/cxi86415/back.cfg
+++ b/examples/cxi86415/back.cfg
@@ -1,5 +1,7 @@
 [psana]
-modules = CSPadPixCoords.CSPadNDArrProducer:1 ImgAlgos.NDArrCalib:1 ImgAlgos.PixCoordsProducer:1 ImgAlgos.NDArrImageProducer:1
+calib-dir = /reg/d/psdm/CXI/cxi86415/calib
+modules = CSPadPixCoords.CSPadNDArrProducer:1 ImgAlgos.NDArrCalib:1 
+#ImgAlgos.PixCoordsProducer:1 ImgAlgos.NDArrImageProducer:1
 
 [CSPadPixCoords.CSPadNDArrProducer:1]
 source  = DetInfo(CxiDs2.0:Cspad.0)
@@ -21,11 +23,11 @@ do_gain = no
 do_nrms = no
 do_thre = no
 
-[ImgAlgos.PixCoordsProducer:1]
-source  = DetInfo(CxiDs2.0:Cspad.0)
-mask_bits = 255
-key_out_mask = pix_mask 
+#[ImgAlgos.PixCoordsProducer:1]
+#source  = DetInfo(CxiDs2.0:Cspad.0)
+#mask_bits = 255
+#key_out_mask = pix_mask 
 
-[ImgAlgos.NDArrImageProducer:1]
-source     = DetInfo(CxiDs2.0:Cspad.0)
-key_in     = calibrated
+#[ImgAlgos.NDArrImageProducer:1]
+#source     = DetInfo(CxiDs2.0:Cspad.0)
+#key_in     = calibrated
