--- a/examples/cxi86415/front.cfg
+++ b/examples/cxi86415/front.cfg
@@ -1,5 +1,5 @@
 [psana]
-modules = CSPadPixCoords.CSPadNDArrProducer:0 ImgAlgos.NDArrCalib:0 ImgAlgos.PixCoordsProducer:0 ImgAlgos.NDArrImageProducer:0
+modules = CSPadPixCoords.CSPadNDArrProducer:0 ImgAlgos.NDArrCalib:0 CSPadPixCoords.CSPadImageProducer:0
 
 [CSPadPixCoords.CSPadNDArrProducer:0]
 source  = DetInfo(CxiDs1.0:Cspad.0)
@@ -21,12 +21,10 @@ do_gain = no
 do_nrms = no
 do_thre = no
 
-[ImgAlgos.PixCoordsProducer:0]
+[CSPadPixCoords.CSPadImageProducer:0]
 source  = DetInfo(CxiDs1.0:Cspad.0)
-mask_bits = 255
-key_out_mask = pix_mask 
-
-[ImgAlgos.NDArrImageProducer:0]
-source     = DetInfo(CxiDs1.0:Cspad.0)
-key_in     = calibrated
+typeGroupname = CsPad:CalibV1
+key  = calibrated
+imgkey = reconstructed
+tiltIsApplied = true
 print_bits = 0
