--- a/examples/cxi86415/Ds2_recons.cfg
+++ b/examples/cxi86415/Ds2_recons.cfg
@@ -1,7 +1,6 @@
 [psana]
-#calib-dir = /reg/d/psdm/CXI/cxi86415/calib
+calib-dir = /reg/d/psdm/CXI/cxi86415/calib
 modules = CSPadPixCoords.CSPadNDArrProducer:1 ImgAlgos.NDArrCalib:1 CSPadPixCoords.CSPadImageProducer:1
-#ImgAlgos.PixCoordsProducer:1 ImgAlgos.NDArrImageProducer:1
 
 [CSPadPixCoords.CSPadNDArrProducer:1]
 source  = DetInfo(CxiDs2.0:Cspad.0)
@@ -31,12 +30,3 @@ key  = calibrated
 imgkey = reconstructed
 tiltIsApplied = true
 print_bits = 0
-
-#[ImgAlgos.PixCoordsProducer:1]
-#source  = DetInfo(CxiDs2.0:Cspad.0)
-#mask_bits = 255
-#key_out_mask = pix_mask 
-
-#[ImgAlgos.NDArrImageProducer:1]
-#source     = DetInfo(CxiDs2.0:Cspad.0)
-#key_in     = calibrated
