--- a/examples/cxi86415/Ds2_recons.cfg
+++ b/examples/cxi86415/Ds2_recons.cfg
@@ -1,5 +1,5 @@
 [psana]
-calib-dir = /reg/d/psdm/CXI/cxi86415/calib
+#calib-dir = /reg/d/psdm/CXI/cxi86415/calib
 modules = CSPadPixCoords.CSPadNDArrProducer:1 ImgAlgos.NDArrCalib:1 CSPadPixCoords.CSPadImageProducer:1
 
 [CSPadPixCoords.CSPadNDArrProducer:1]
