Developing conf script for beam time - assembly by psana

--- a/cxi86715/psana_cfg/Ds2.cfg
+++ b/cxi86715/psana_cfg/Ds2.cfg
@@ -21,3 +21,11 @@ do_bkgd = no
 do_gain = no 
 do_nrms = no
 do_thre = no
+
+[CSPadPixCoords.CSPadImageProducer:0]
+source  = DetInfo(CxiDs2.0:Cspad.0)
+typeGroupname = CsPad:CalibV1
+key  = calibrated
+imgkey = reconstructed
+tiltIsApplied = true
+print_bits = 0
