--- a/cxi86715/psana_cfg/Ds2_recons.cfg
+++ b/cxi86715/psana_cfg/Ds2_recons.cfg
@@ -23,7 +23,7 @@ do_gain = no
 do_nrms = no
 do_thre = no
 
-[CSPadPixCoords.CSPad2x2ImageProducer:1]
+[CSPadPixCoords.CSPadImageProducer:1]
 source  = DetInfo(CxiDs2.0:Cspad.0)
 typeGroupname = CsPad:CalibV1
 key  = calibrated
