Added big CSPAD to conf.py of cxi86715

--- a/cxi86715/psana_cfg/Ds2.cfg
+++ b/cxi86715/psana_cfg/Ds2.cfg
@@ -1,5 +1,5 @@
 [psana]
-calib-dir = /reg/d/psdm/CXI/cxi86415/calib
+#calib-dir = /reg/d/psdm/CXI/cxi86415/calib
 modules = CSPadPixCoords.CSPadNDArrProducer:1 ImgAlgos.NDArrCalib:1 
 
 [CSPadPixCoords.CSPadNDArrProducer:1]
@@ -22,10 +22,10 @@ do_gain = no
 do_nrms = no
 do_thre = no
 
-[CSPadPixCoords.CSPadImageProducer:0]
-source  = DetInfo(CxiDs2.0:Cspad.0)
-typeGroupname = CsPad:CalibV1
-key  = calibrated
-imgkey = reconstructed
-tiltIsApplied = true
-print_bits = 0
+#[CSPadPixCoords.CSPadImageProducer:0]
+#source  = DetInfo(CxiDs2.0:Cspad.0)
+#typeGroupname = CsPad:CalibV1
+#key  = calibrated
+#imgkey = reconstructed
+#tiltIsApplied = true
+#print_bits = 0
