Explicit calib dir

--- a/cxi86715/psana_cxi86715.cfg
+++ b/cxi86715/psana_cxi86715.cfg
@@ -1,5 +1,5 @@
 [psana]
-#calib-dir = /reg/d/psdm/CXI/cxi86415/calib
+calib-dir = /reg/d/psdm/CXI/cxi86715/calib
 modules = CSPadPixCoords.CSPad2x2NDArrProducer:2 ImgAlgos.NDArrCalib:2 CSPadPixCoords.CSPad2x2ImageProducer:2 CSPadPixCoords.CSPadNDArrProducer:1 ImgAlgos.NDArrCalib:1 spi.photconv
 
 [CSPadPixCoords.CSPad2x2NDArrProducer:2]
