--- a/scripts/mask.conf
+++ b/scripts/mask.conf
@@ -4,5 +4,6 @@ std_threshold    = 5.
 std_limit        = 0.01
 median_threshold = none
 median_limit     = none
-output_png       = True
 badpixelmask     = none
+output_png       = True
+outdir           = ./mask/
