--- a/cxi86715/psana_cfg/psana.cfg
+++ b/cxi86715/psana_cfg/psana.cfg
@@ -21,13 +21,15 @@ do_bkgd = no
 do_gain = yes 
 do_nrms = no
 do_thre = no
+print_bits = 127
+printbits = 127
 
 [CSPadPixCoords.CSPad2x2ImageProducer:2]
 source  = DetInfo(CxiDg3.0:Cspad2x2.0)
 inkey  = calibrated
 outimgkey = image
 tiltIsApplied = true
-print_bits = 0
+print_bits = 127
 
 [CSPadPixCoords.CSPadNDArrProducer:1]
 source  = DetInfo(CxiDs2.0:Cspad.0)
