Adding Camera to psana config

--- a/cxi86715/psana_cfg/both_cspads.cfg
+++ b/cxi86715/psana_cfg/both_cspads.cfg
@@ -1,12 +1,16 @@
 [psana]
 calib-dir = /reg/d/psdm/CXI/cxi86715/calib
-modules = CSPadPixCoords.CSPad2x2NDArrProducer:2 ImgAlgos.NDArrCalib:2 CSPadPixCoords.CSPad2x2ImageProducer:2 CSPadPixCoords.CSPadNDArrProducer:1 ImgAlgos.NDArrCalib:1 spi.photconv
+modules = CSPadPixCoords.CSPad2x2NDArrProducer:2 ImgAlgos.NDArrCalib:2 CSPadPixCoords.CSPad2x2ImageProducer:2 CSPadPixCoords.CSPadNDArrProducer:1 ImgAlgos.NDArrCalib:1 spi.photconv ImgAlgos.CameraImageProducer
 
 [CSPadPixCoords.CSPad2x2NDArrProducer:2]
 source  = DetInfo(CxiDg2.0:Cspad2x2.0)
 outkey = cspad_ndarr
 outtype = double
 print_bits = 0
+
+[ImgAlgos.CameraImageProducer]
+source = Sc2Questar
+key_out = image
 
 [ImgAlgos.NDArrCalib:2] 
 source  = DetInfo(CxiDg2.0:Cspad2x2.0)
