Changing name for camera source for possibly better performance, avoiding image duplicate

--- a/cxi86715/psana_cfg/both_cspads.cfg
+++ b/cxi86715/psana_cfg/both_cspads.cfg
@@ -10,7 +10,7 @@ print_bits = 0
 
 [ImgAlgos.CameraImageProducer]
 source = Sc2Questar
-key_out = image
+key_out = camimage
 
 [ImgAlgos.NDArrCalib:2] 
 source  = DetInfo(CxiDg2.0:Cspad2x2.0)
