--- a/archive/amo86615/psana_cfg/pnccd.cfg
+++ b/archive/amo86615/psana_cfg/pnccd.cfg
@@ -20,8 +20,10 @@ source = DetInfo(Camp.0:pnCCD.0)
 key_in = arr
 key_out = calibrated 
 do_peds = yes
-do_cmod = yes
-do_stat = yes
+#do_cmod = yes
+#do_stat = yes
+do_stat = no
+do_cmod = no
 do_mask = no
 do_bkgd = no
 do_gain = no 
@@ -60,8 +62,10 @@ source = DetInfo(Camp.0:pnCCD.1)
 key_in = arr
 key_out = calibrated 
 do_peds = yes
-do_cmod = yes
-do_stat = yes
+#do_cmod = yes
+#do_stat = yes
+do_cmod = no
+do_stat = no
 do_mask = no
 do_bkgd = no
 do_gain = no 
